methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.NORTH){
  ^MethodsArgs:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  Y=getY()
  ^MethodsArgs:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  nbPas=6-Y
  ^MethodsArgs:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (versLAvant==true){
  ^MethodsArgs:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(versLAvant==false){
  ^